[project]
name = "module.daily_news"
version = "0.1.0"
description = ""
dependencies = []
authors = []

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[mephisto]
name = "今日牛子"
identifier = "module.daily_news"
dependencies = []
standards = []
