[project]
name = "module.fluffle"
version = "0.1.0"
description = ""
dependencies = []
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" }
]
requires-python = ">=3.12"

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[mephisto]
identifier = "module.fluffle"
name = "Fluffle"
dependencies = [{ identifier = "module.link_preview" }]
standards = []
