[project]
name = "module.link_preview"
version = "0.1.0"
description = ""
dependencies = [
    "tweet-crawler @ git+https://github.com/nullqwertyuiop/tweet-crawler.git@main"
]
authors = [
    { name = "nullqwertyuiop", email = "null@member.fsf.org" }
]
requires-python = ">=3.12"

[tool.pdm]
distribution = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[mephisto]
identifier = "module.link_preview"
name = "链接预览"
dependencies = []
standards = []
